// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button as a link button types reverse matches snapshot: ReverseButton 1`] = `
<div>
  <a
    class="nhsuk-button nhsuk-button--reverse"
    data-module="nhsuk-button"
    data-nhsuk-button-init=""
    draggable="false"
    href="/"
    role="button"
  >
    Log out
  </a>
</div>
`;

exports[`Button as a link button types secondary matches snapshot: SecondaryButton 1`] = `
<div>
  <a
    class="nhsuk-button nhsuk-button--secondary"
    data-module="nhsuk-button"
    data-nhsuk-button-init=""
    draggable="false"
    href="/"
    role="button"
  >
    Find my location
  </a>
</div>
`;

exports[`Button as a link matches snapshot: LinkButton 1`] = `
<div>
  <a
    class="nhsuk-button"
    data-module="nhsuk-button"
    data-nhsuk-button-init=""
    draggable="false"
    href="/"
    role="button"
  >
    Find my location
  </a>
</div>
`;

exports[`Button disabled matches snapshot: DisabledButton 1`] = `
<div>
  <button
    aria-disabled="true"
    class="nhsuk-button"
    data-module="nhsuk-button"
    data-nhsuk-button-init=""
    disabled=""
    type="submit"
  >
    Save and continue
  </button>
</div>
`;

exports[`Button matches snapshot (via server): client 1`] = `
<div>
  <button
    class="nhsuk-button"
    data-module="nhsuk-button"
    data-nhsuk-button-init=""
    type="submit"
  >
    Save and continue
  </button>
</div>
`;

exports[`Button matches snapshot (via server): server 1`] = `
<div>
  <button
    class="nhsuk-button"
    data-module="nhsuk-button"
    type="submit"
  >
    Save and continue
  </button>
</div>
`;

exports[`Button matches snapshot 1`] = `
<div>
  <button
    class="nhsuk-button"
    data-module="nhsuk-button"
    data-nhsuk-button-init=""
    type="submit"
  >
    Save and continue
  </button>
</div>
`;

exports[`Button reverse matches snapshot: ReverseButton 1`] = `
<div>
  <button
    class="nhsuk-button nhsuk-button--reverse"
    data-module="nhsuk-button"
    data-nhsuk-button-init=""
    type="submit"
  >
    Save and continue
  </button>
</div>
`;

exports[`Button secondary matches snapshot: SecondaryButton 1`] = `
<div>
  <button
    class="nhsuk-button nhsuk-button--secondary"
    data-module="nhsuk-button"
    data-nhsuk-button-init=""
    type="submit"
  >
    Save and continue
  </button>
</div>
`;
